fixed a bug in UIDFolderInfo which made it so you couldn't append 
non-UIDMimeMessages.

modified the fetch() functionality of the FolderInfos so that we only 
fetch Pooka.fetchBatchSize messages at a time.  this should reduce the amout
of time it takes to display large folders at startup.

changed the SMTP server support so that we now have a separate SMTP server
object, instead of having the servers configured in the UserProfile.

2001 november 05 release
------------------------

fixed new message check algorithm for pop3 folders where old messages are
left on the server.

support added for pre and post connection commands for mailboxes (pilone)

added the ability to synchronize with the IMAP subscribed folders list.

added limited address book support using Vcards.

added support for reading RFC 2047 encoded headers

fixed bug where an outgoing message window could be closed even if the
send failed.

fixed sorting of subject lines and from addresses

