@@ -1,11 +1,4 @@
-*)  Features not implemented yet:  Searches, Address Book.
-
-*)  The startup UI will only prompt you to create a new IMAP folder.  If
-you wish to use POP3, then you can either skip that step and go directly to
-Edit->User Configuration and Edit->Store Configuration.
-
 *)  If you're going to use Preview Pane mode, you should run with a 
 1.3 JDK.  There are a few bugs in the sizing code in JDK 1.2 that can cause
 problems in Preview mode.
 
-*)
